# Time-Tracking-System

./: CMakeLists.txt  README.md  start.sh
cmake/: FindSDL2_image.cmake
data/: screen.txt
data/SDL2_image-2.0.5/: FindSDL2_image.cmake
data/SDL2_ttf-2.0.18/: Makefile.in  aclocal.m4  configure
data/SDL2_ttf-2.0.18/autom4te.cache/: output.1  requests  traces.0  traces.1
inc/: gui.h  odoo.h  render.h
src/: cookies.txt  getScreenInfo.c  gui.c  info  json.c  odoo.c  render.c
